k8s/istio/admin-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: admin-gateway
  namespace: rapido-prod
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
