k8s/istio/admin-circuitbreaker.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: admin-destinationrule
  namespace: rapido-prod
spec:
  host: admin-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 2
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
  subsets:
    - name: v1
      labels:
        version: v1
