k8s/istio/admin-destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: admin-destinationrule
  namespace: rapido-prod
spec:
  host: admin-service
  subsets:
  - name: v1
    labels:
      version: v1
